// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight /> with element prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Highlight
  element="span"
>
  <TextPrimitive
    color="black"
    element="span"
    size="regular"
    spacing="none"
    variant="p"
    weight="regular"
  >
    <Paragraph
      color="black"
      element="span"
      size="regular"
      spacing="none"
      underline={false}
      weight="regular"
    >
      <Primitive
        className="c0"
        color="black"
        element="span"
        size="regular"
        spacing="none"
        underline={false}
        weight="regular"
      >
        <span
          className="c0"
        >
          Element prop test
        </span>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</Highlight>
`;

exports[`<Highlight /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Highlight
  size="regular"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="none"
    variant="p"
    weight="regular"
  >
    <Paragraph
      color="black"
      element="p"
      size="regular"
      spacing="none"
      underline={false}
      weight="regular"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="none"
        underline={false}
        weight="regular"
      >
        <p
          className="c0"
        >
          Regular size test
        </p>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</Highlight>
`;
